--- a/report.html
+++ b/report.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Report Title</title>
+  <title>Autonomous 3D Mapping Using SLAM</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -61,9 +61,9 @@
 <body>
 
   <header>
-    <h1>Optimized Path Planning using YOLO, ORB-SLAM3 and ADMM</h1>
+    <h1>Autonomous 3D Mapping Using SLAM</h1>
     <section id="team" style="padding: 2rem; font-family: Arial, sans-serif;">
-        <h2 style="text-align: center; color: #2c3e50;">👥 Team Members</h2>
+        <h2 style="text-align: center; color: #2c3e50;">👥 Team 4</h2>
         <p style="text-align: center; color: #7f8c8d; font-size: 1rem; margin-bottom: 1.5rem;">
           B.Tech Artificial Intelligence & Machine Learning — <strong>Batch B</strong>
         </p>
@@ -1188,7 +1188,7 @@ params.cost.collision       % Collision avoidance weight
 
 
   <footer>
-    <p>&copy; 2025 Your Name | All Rights Reserved</p>
+    <p>&copy; 2025 Team 4 | All Rights Reserved</p>
   </footer>
 
 </body>
